--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
     <title>Vegapunk</title>
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body>
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
