--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,6 @@
     %sveltekit.head%
   </head>
   <body>
-    <div style="display: contents">%sveltekit.body%</div>
+    <div>%sveltekit.body%</div>
   </body>
 </html>
